--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^18.2.14"
+    "@types/react": "^18.2.14",
+    "@types/react-router-dom": "^5.3.3"
   }
 }
