--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@near-wallet-selector/account-export": "^8.2.0",
     "@near-wallet-selector/core": "^8.2.0",
     "@near-wallet-selector/here-wallet": "^8.2.0",
@@ -10,6 +11,7 @@
     "@near-wallet-selector/modal-ui": "^8.2.0",
     "@near-wallet-selector/my-near-wallet": "^8.2.0",
     "@near-wallet-selector/near-wallet": "^8.2.0",
+    "@sendgrid/mail": "^7.7.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -19,6 +21,7 @@
     "near-api-js": "^0.44.2",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
+    "react-redux": "^8.1.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
